[package]
name = "mrbgpd"
version = "0.1.0"
authors = ["Miyoshi-Ryota <m1yosh1.ry0t4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.7.0"
futures = "0.3.11"
tokio = { version = "1.4.0", features = ["full"]}
